--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,21 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'jacoco'
+apply plugin: 'application'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+jar {
+    baseName = 'JenkinsOSDemo'
+    version = '1.0.0'
+}
+
 repositories {
 	mavenCentral()
+    maven { url "http://vsvnp1:8888/archiva/repository/internal" }
+    maven { url "http://vsvnp1:8888/archiva/repository/snapshots"}
 }
 
 
