--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,16 @@
-buildscript {
-	ext {
-		springBootVersion = '1.5.6.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+plugins {
+    id 'org.springframework.boot' version '1.5.6.RELEASE'
+    id 'java'
+    id 'application'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'jacoco'
-apply plugin: 'application'
-
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = 1.8
-
-jar {
-    baseName = 'JenkinsOSDemo'
-    version = '1.0.0'
-}
 
 repositories {
 	mavenCentral()
     maven { url "http://vsvnp1:8888/archiva/repository/internal" }
-    maven { url "http://vsvnp1:8888/archiva/repository/snapshots"}
 }
-
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
